# threadwatch

./: .env.1password.example  .gitignore  README.md  pyproject.toml
examples/tools/: calculator.py  web_search.py  web_search_ddg.py  word_count.py
tests/: test_calculator.py  test_fmt_args.py  test_parse_tool_calls.py  test_pathology.py  test_resolve_key.py
threadwatch/: cli.py  display.py  export.py  loop.py  pathology.py  provider.py  trace.py
threadwatch/tools/: __init__.py
