[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threadwatch"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.scripts]
threadwatch = "threadwatch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["threadwatch"]
